fix webkit will auto adjust the font size when too small

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -5,7 +5,7 @@ html {
 // word break
 * {
   word-break: break-all;
-  -webkit-text-size-adjust: auto!important;
+  -webkit-text-size-adjust: none!important;
 }
 
 // shortcut for image center
